# trailscraper

./: .gitignore  .pylintrc  .python-version  .pyup.yml  .talismanignore  .tool-versions  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  TODO.md  further-work.md  go  homebrew-formula.rb.tpl  plan.md  pr-message.txt.tpl  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini  unknown_actions.txt
.github/: dependabot.yml
.github/workflows/: auto-merge-dependabot.yml  check.yml  codeql-analysis.yml  dependabot-automerge.yml  dependabot_automerge.yml  dependabot_pr.yml
tests/: __init__.py  boto_service_definitions_test.py  iam-actions-from-cloudonaut.json  iam-actions-from-policy-sim.txt  iam.json  known-iam-actions.txt  list_unknown_actions.py  s3_download_test.py  test_utils_iam.py  test_utils_s3.py  test_utils_testdata.py
tests/cloudtrail/: cloudtrail_test.py  filter_test.py  logfile_test.py  map_to_iam_sanity_test.py  record_test.py
tests/cloudtrail/data/: 111111111111_CloudTrail_eu-central-1_20171211T1505Z_A6kvhMoVeCsc7v8U.json  someRecords.json
tests/collection_utils/: consume_test.py
tests/iam/: action_test.py  known_iam_actions_test.py  policy_document_test.py  statement_test.py
tests/integration/: cli_download_s3_test.py  cli_generate_policy_test.py  cli_generate_test.py  cli_guess_test.py  cli_help_test.py  cli_last_event_timestamp_test.py  cli_select_events_test.py  cli_test.py
tests/policy_generator/: __init__.py  combine_statements_test.py  generate_policy_from_records_test.py  generate_policy_test.py  source_to_iam_prefix_test.py
tests/record_sources/: local_directory_record_source_test.py
tests/s3/: download_recursive_test.py  key_prefixes_test.py  s3_download_test.py
tests/smoke/: events-for-smoke-test.json  policy-to-guess.json
tests/time_utils/: human_readable_time_parsing.py  human_readable_time_parsing_test.py
trailscraper/: __init__.py  boto_service_definitions.py  cli.py  cloudtrail.py  collection_utils.py  guess.py  iam.py  policy_generator.py  s3_download.py  time_utils.py
trailscraper/record_sources/: __init__.py  cloudtrail_api_record_source.py  local_directory_record_source.py
