[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trailscraper"
version = "0.10.0"
description = "A command-line tool to get valuable information out of AWS CloudTrail"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache License 2.0"}
authors = [
    {name = "Florian Sellmayr", email = "florian.sellmayr@gmail.com"}
]
keywords = ["aws", "cloud", "iam", "cloudtrail", "trailscraper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "boto3==1.38.3",
    "click==8.1.8",
    "toolz==1.0.0",
    "dateparser==1.2.1",
    "pytz==2025.2",
    "ruamel.yaml==0.18.10",
]

[project.optional-dependencies]
dev = [
    "bumpversion==0.6.0",
    "pylint==3.3.6",
    "pip==25.1",
    "pytest==8.3.5",
    "pytest-runner==6.0.1",
    "setuptools==80.0.0",
    "freezegun==1.5.1",
    "moto==4.2.14",
    "wheel==0.45.1",
    "twine==6.1.0",
]

[project.scripts]
trailscraper = "trailscraper.cli:root_group"

[project.urls]
Homepage = "http://github.com/flosell/trailscraper"

[tool.uv]
python-preference = "only-system"

[tool.hatchling.build.targets.wheel]
packages = ["trailscraper"]

[tool.bumpversion]
current_version = "0.9.2"
commit = true
tag = false

[tool.bumpversion.files."pyproject.toml"]
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.bumpversion.files."trailscraper/__init__.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

